--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -140,3 +140,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Coming from Polymist -->
 <link rel="import" href="app-forms/app-forms.html">
+<link rel="import" href="app-logo/app-logo.html">
