--- a/app/elements/styling-mist.html
+++ b/app/elements/styling-mist.html
@@ -188,15 +188,15 @@
                         <div class="center">
                             <h2>Drop-downs</h2>
                             <p><del>Dropdowns don't currently accept styling outside of app forms. Needs to be checked</del></p>
-                            
+                            <p>In order to change width by css this has to be done on paper-drop-down-menu paper-menu-button element in px</p>
                             <paper-dropdown-menu label="Provider">
-                                        <paper-menu class="dropdown-content">
-                                            <paper-item>EC2</paper-item>
-                                            <paper-item>Docker</paper-item>
-                                            <paper-item>Openstack</paper-item>
-                                            <paper-item>Linode</paper-item>
-                                        </paper-menu>
-                                    </paper-dropdown-menu>
+                                <paper-menu class="dropdown-content">
+                                    <paper-item>EC2</paper-item>
+                                    <paper-item>Docker</paper-item>
+                                    <paper-item>Openstack</paper-item>
+                                    <paper-item>Linode</paper-item>
+                                </paper-menu>
+                            </paper-dropdown-menu>      
                         </div>
                     </section>
                     <section class="section" id="comingnext">
