lists style in networks list

--- a/app/elements/network-item-element.html
+++ b/app/elements/network-item-element.html
@@ -27,7 +27,8 @@
 
     <paper-item on-tap="_viewNetwork" class$="info-item flex-horizontal-with-ratios [[indexClass]]">
       <div class="flexchild">
-        <paper-checkbox checked="{{selected}}" disabled$="[[!isOpenstack]]" on-tap="_selectNetwork"></paper-checkbox> [[network.name]]
+        <paper-checkbox checked="{{selected}}" disabled$="[[!isOpenstack]]" on-tap="_selectNetwork"></paper-checkbox> 
+        <span class="name">[[network.name]]</span>
       </div>
       <div class="flexchild">[[typeText]]</div>
       <div class="flexchild">[[network.cloud.title]]</div>
