--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -249,6 +249,9 @@
         ::content paper-item .name {
             font-weight: 700;
         }
+        ::content paper-item paper-checkbox[disabled] ~ .name {
+            opacity: 0.5;
+        }
         .info-head paper-checkbox ::content #checkbox {
             border-color: #fff;
         }
