lists style in scripts list

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -245,6 +245,7 @@
             padding: 8px 16px;
             border-bottom: 1px solid #e5e5e5;
             min-height: inherit;
+            cursor: pointer;
         }
         ::content paper-item .name {
             font-weight: 700;
