--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -239,6 +239,7 @@
         }
         .info-head > * {
             padding: 8px 0;
+            line-height: 43px;
         }
         
         ::content paper-item {
@@ -251,7 +252,7 @@
             font-weight: 700;
         }
         ::content paper-item paper-checkbox[disabled] ~ .name {
-            opacity: 0.5;
+            opacity: 0.54;
         }
         .info-head paper-checkbox ::content #checkbox {
             border-color: #fff;
@@ -272,6 +273,22 @@
         }
         .card-options paper-icon-button ::content iron-icon:hover {
             color: var(--mist-blue);
+        }
+        ::content iron-collapse.sub-items {
+            border-bottom: 2px solid #ccc;
+        }
+        ::content iron-collapse.sub-items .info-item {
+            padding: 16px 0 16px 46px;
+            border-bottom: 1px solid #e5e5e5;
+            min-height: inherit;
+            opacity: 0.54;
+            font-size: 0.9em;
+        }
+        ::content .active-true {
+            color: #999;
+        }
+        ::content .session-active {
+            color: #000;
         }
         </style>
     </template>
