--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -319,6 +319,7 @@
 <dom-module id="single-page">
     <template>
         <style>
+        /*TAKE CARE: needs renaming, will possibly break used with css id="lists"*/
         /* Lists Basic Styling */
         
         .info-head > * {
