give a label to mass keys-deletion button. should update singular/plural text

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -274,12 +274,12 @@
         .row:nth-child(2n+1) {
             background-color: #fafafa;
         }
-        .card-options {
+        .list-options {
             background-color: var(--mist-lighter-color);
             padding: 16px;
         }
 
-        .card-options paper-icon-button {
+        .list-options paper-icon-button {
             vertical-align: top;
         }
 
@@ -287,12 +287,12 @@
             display: inline-block;
         }
 
-        .card-options paper-icon-button >::content iron-icon {
+        .list-options paper-icon-button >::content iron-icon {
             color: var(--mist-light-color);
             transition: 1s color;
         }
         
-        .card-options:hover paper-icon-button >::content iron-icon {
+        .list-options:hover paper-icon-button >::content iron-icon {
             color: var(--mist-blue);
         }
         
