--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -38,10 +38,18 @@
             /*opacity: 1;
             transform: translate3d(0, 0, 0);*/
         }
+        .label {
+            font-size: 0.8em;
+            color: var(--mist-light-color);
+            padding: 8px 8px 0 0;
+            line-height: 25px;
+            display: inline-block;
+            text-transform: uppercase;
+        }
         </style>
         <paper-card heading="Keys">
         <div class="card-content">
-            <div hidden$="[[!hasKeys]]" class="card-options">
+            <div hidden$="[[!hasKeys]]" class="list-options">
                 <paper-tooltip for="searchKeyBtn" position="top">Toggle Search</paper-tooltip>
                 <paper-icon-button id="searchKeyBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
                 <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
@@ -49,8 +57,13 @@
                 <paper-icon-button id="makeDefaultKeyBtn" hidden$="[[!showMakeDefaultOption]]" on-tap="_starSelected" icon="[[makeDefaultIcon]]"></paper-icon-button>
                 <paper-tooltip for="editKeyBtn" position="top">Rename</paper-tooltip>
                 <paper-icon-button id="editKeyBtn" hidden$="[[!showEditOption]]" on-tap="_editSelected" icon="image:edit"></paper-icon-button>
-                <paper-tooltip for="deleteKeyBtn" position="top">Delete</paper-tooltip>
+                <paper-tooltip for="deleteKeyBtn" position="top">Delete 
+                    All Selected
+                </paper-tooltip>
                 <paper-icon-button id="deleteKeyBtn" hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
+                <span hidden$="[[!showDeleteOption]]" class="label">
+                    Delete [[selectedKeys.length]] key<span hidden$="[[!moreThanOneSelected(selectedKeys)]]">s</span> </span>
+                </span>
             </div>
             
                 <div hidden$="[[!hasKeys]]" class="info-list">
@@ -321,6 +334,10 @@
                 var notification = document.querySelector('notification-element');
                 notification.title = title;
                 notification._openToast();
+            },
+            moreThanOneSelected:  function(selectedKeys) {
+                //does not work. label should hide 's' when only one key is selected
+                return (selectedKeys.length > 1 ? false : true);
             }
         });
     })();
