--- a/app/elements/user-menu-element.html
+++ b/app/elements/user-menu-element.html
@@ -34,7 +34,7 @@
 
     <paper-menu-button horizontal-align="right">
       <paper-button class="user-menu dropdown-trigger" noink>
-        <gravatar-component class="pull-right" email="[[user.email]]" size="40" alt-text="[[menuText]]"></gravatar-component>
+        <gravatar-component class="pull-right" email="[[user.email]]" retina size="40" alt-text="[[menuText]]"></gravatar-component>
         <span class="name pull-right">[[menuText]]</span>
       </paper-button>
 
