--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -2,73 +2,45 @@
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
 <dom-module id="notes-page-element">
-  <template>
-    <style include="shared-styles">
-      :host {
-        display: block;
-      }
+    <template>
+        <style include="shared-styles">
+            :host {
+                display: block;
+            }
 
-      paper-card {
-        display: block;
-      }
-    </style>
+            paper-card {
+                display: block;
+            }
+        </style>
 
-    <paper-card>
-      <div class="card-content">
-        <marked-element>
-          <div class="markdown-html markdown-body"></div>
-          <script type="text/markdown">
-            #### Add Cloud
-            - Place the real Object
-            - Create dynamic dropdowns
-            - Add validation
+        <paper-card>
+            <div class="card-content">
+                <marked-element>
+                    <div class="markdown-html markdown-body"></div>
+                    <script type="text/markdown">
+                        #### Add Cloud - Place the real Object - Create dynamic dropdowns - Add validation #### Keys List - Update random items and sort again #### Add Key - Set up upload key file - Set up iron-ajax request for save - Send the new key to keys list #### Networks
+                        List - Update random items and sort again - Fix types #### Single Network - Subnets - IPs #### Scripts List - Update random items and sort again #### Plans - Change the layout - Apply a different if...else logic in the template
+                        - Remove jQuery logic in the forms handlers #### Add Token - Fix the token copying in the end
+                    </script>
+                </marked-element>
+            </div>
+        </paper-card>
+    </template>
 
-            #### Keys List
-            - Update random items and sort again
+    <script>
+        (function() {
+            'use strict';
 
-            #### Add Key
-            - Set up upload key file
-            - Set up iron-ajax request for save
-            - Send the new key to keys list
+            Polymer({
+                is: 'notes-page-element',
 
-            #### Networks List
-            - Update random items and sort again
-            - Fix types
+                properties: {
 
-            #### Single Network
-            - Subnets
-            - IPs
+                },
+                ready: function() {
 
-            #### Scripts List
-            - Update random items and sort again
-
-            #### Plans
-            - Change the layout
-            - Apply a different if...else logic in the template
-            - Remove jQuery logic in the forms handlers
-
-            #### Add Token
-            - Fix the token copying in the end
-          </script>
-        </marked-element>
-      </div>
-    </paper-card>
-  </template>
-
-  <script>
-    (function() {
-      'use strict';
-
-      Polymer({
-        is: 'notes-page-element',
-
-        properties: {
-
-        },
-        ready: function() {
-
-        }
-      });
-    })();
-  </script>
+                }
+            });
+        })();
+    </script>
 </dom-module>
