--- a/app/elements/machine-item-element.html
+++ b/app/elements/machine-item-element.html
@@ -8,16 +8,22 @@
                 display: block;
             }
 
-            paper-card {
-                display: block;
+            .flex-horizontal-with-ratios {
+                @apply(--layout-horizontal);
+            }
+
+            .flexchild {
+                @apply(--layout-flex);
             }
         </style>
 
-        <paper-card heading="Add Machine">
-            <div class="card-content">
-                <p>Add full page machines dynamic form here</p>
+        <paper-item on-tap="_viewMachine" class$="info-item flex-horizontal-with-ratios [[indexClass]]">
+            <div class="flexchild">
+                <paper-checkbox checked="{{selected}}" on-tap="_selectMachine"></paper-checkbox>
+                <span class="name">[[machine.name]]</span>
             </div>
-        </paper-card>
+            <div class="flexchild">[[machine.cloud.title]]</div>
+        </paper-item>
     </template>
 
     <script>
@@ -30,7 +36,47 @@
                 properties: {
                     machine: {
                         type: Object
+                    },
+                    selected: {
+                        type: Boolean,
+                        value: false,
+                        notify: true
+                    },
+                    index: {
+                        type: Number
+                    },
+                    count: {
+                        type: Number
+                    },
+                    indexClass: {
+                        type: String,
+                        computed: '_computeIsIndexClass(index, count)'
                     }
+                },
+                listeners: {
+                    'selected-changed': '_selectMachineChanged'
+                },
+                _computeIsIndexClass: function(index, count) {
+                    var classes = [];
+                    classes.push(
+                        (index + 1) % 2 == 0 ? 'even' : 'odd',
+                        index + 1 == count ? 'last' : null
+                    );
+                    return classes.join(' ');
+                },
+                _selectMachineChanged: function(e) {
+                    var selected = e.detail.value;
+                    this.fire('toggleSelectedMachine', {
+                        machine: this.machine,
+                        selected: selected
+                    });
+                },
+                _viewMachine: function(e) {
+                    page.show('/machines/' + this.machine.id);
+                },
+                _selectMachine: function(e) {
+                    // This is used to prevent event bubbling
+                    e.stopPropagation();
                 }
             });
         })();
