--- a/app/elements/network-item-element.html
+++ b/app/elements/network-item-element.html
@@ -22,6 +22,7 @@
             </div>
             <div class="flexchild">[[typeText]]</div>
             <div class="flexchild">[[network.cloud.title]]</div>
+            <content></content>
         </paper-item>
     </template>
     <script>
