list options and row actions in script list

--- a/app/elements/script-item-element.html
+++ b/app/elements/script-item-element.html
@@ -25,6 +25,7 @@
                 <span class="name">[[script.name]]</span>
             </div>
             <div class="flexchild">[[script.type]]</div>
+            <content></content>
         </paper-item>
     </template>
     <script>
