fix warning on missing function

--- a/app/elements/app-forms/app-forms.html
+++ b/app/elements/app-forms/app-forms.html
@@ -30,9 +30,8 @@ Polymer({
     properties: {
         formtitle: {
             String,
-            value: "",
-            observer: 'makeFormTitle'
-        }, //default value of form
+            value: ""
+        }, 
     },    
     behaviors: [Polymer.PaperInputBehavior, Polymer.PaperInputAddonBehavior]
 });
