list options and row actions in memebers list

--- a/app/elements/member-item-element.html
+++ b/app/elements/member-item-element.html
@@ -24,6 +24,7 @@
                 <paper-checkbox checked="{{selected}}" on-tap="_selectMember"></paper-checkbox> <span class="name">[[member.name]]</span>
             </div>
             <div class="flexchild">[[member.role]]</div>
+            <content></content>
         </paper-item>
     </template>
     <script>
