list options and row actions in policies list

--- a/app/elements/policy-item-element.html
+++ b/app/elements/policy-item-element.html
@@ -15,6 +15,7 @@
             <div class="flexchild">
                 <paper-checkbox checked="{{selected}}" on-tap="_selectPolicy"></paper-checkbox> [[descriptionText]]
             </div>
+            <content></content>
         </paper-item>
     </template>
     <script>
